--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# VSCode project settings
+.vscode/
+
 # Personal api key
 api-key.txt
